# pico2-benchmark

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  flake.nix
.bash/: build.sh  flash.sh  run.sh
.direnv/: flake-profile-16-link  flake-profile-19-link  flake-profile-2-link  flake-profile-55-link  flake-profile-6-link
.nix/: README.md  flake.nix  flash.sh  run.sh  shell.nix
.nix/benchmarks/: build.sh
.nix/common/: build.sh
.nix/host/: build.sh
.nix/pico/: flash.sh  run.sh
.nix/scripts/: console.py  run.sh
.nix/shell/: observe.sh
benchmarks/: copy-double.json  copy-float.json  det-double.json  det-float.json  eigen-double.json  eigen-float.json  heap-alloc-double.json  heap-alloc-float.json  inverse-double.json  inverse-float.json  llt-double.json  llt-float.json  lu-double.json  lu-float.json  matmul-double.json  matmul-float.json  qr-double.json  qr-float.json  rank-double.json  rank-float.json  read-flash-double.json  read-flash-float.json  stack-alloc-double.json  stack-alloc-float.json
benchmarks/accuracy/: CMakeLists.txt  README.md  double.cpp
benchmarks/alloc-heap/: CMakeLists.txt  README.md  float.cpp
benchmarks/alloc-stack/: CMakeLists.txt  float.cpp
benchmarks/copy-heap/: CMakeLists.txt  README.md
benchmarks/copy-stack/: CMakeLists.txt  double.cpp
benchmarks/det/: CMakeLists.txt
benchmarks/det-stack/: CMakeLists.txt
benchmarks/eigen-values/: CMakeLists.txt  double.cpp  float.cpp
benchmarks/inverse/: CMakeLists.txt  double.cpp
benchmarks/llt/: CMakeLists.txt  double.cpp
benchmarks/lu/: CMakeLists.txt  double.cpp  float.cpp
benchmarks/matmul/: CMakeLists.txt  double.cpp  float.cpp
benchmarks/matmul-stack/: CMakeLists.txt  double.cpp  float.cpp
benchmarks/psram/: CMakeLists.txt  float.cpp
benchmarks/psram-allocator/: CMakeLists.txt  double.cpp  float.cpp
benchmarks/qr/: CMakeLists.txt
benchmarks/rank/: CMakeLists.txt  double.cpp  float.cpp
benchmarks/read-flash/: CMakeLists.txt  float.cpp
benchmarks/read-flash-stack/: CMakeLists.txt
blink/: CMakeLists.txt  blink.c
console/: main.py
include/: Benchmark.h  Timer.h  benchmarks.h  const_rand.h  heap.h  my_rand.h  print.h  ps_ram.h  ps_ram.h.bak  rand.h  repeat.h  setup.h  timer.h  timer.h.bak  utils.h
include/benchmarks/: alloc.h  benchmarks.h  copy.h  det.h  determinant.h  eigen.h  fragmentation.h  heap_alloc.h  inverse.h  llt.h  lu.h  matmul.h  qr.h  rank.h  stack_alloc.h  utils.h
nix/: build.sh  flash.sh  mkBuild.nix  mkRun.nix  observe.sh  shell.nix
pico/: CMakeLists.txt
pico-results/: COPY-DOUBLE-RESULT.csv  DET-DOUBLE-RESULT.csv  DET-DOUBLE-TEST.csv  DET-FLOAT-RESULT.csv  EIGEN-VALUES-DOUBLE-TEST.csv  EIGEN-VALUES-FLOAT-RESULT.csv  EIGEN-VALUES-FLOAT-TEST.csv  HEAP-ALLOC-DOUBLE-RESULT.csv  INVERSE-DOUBLE-RESULT.csv  INVERSE-DOUBLE-TEST.csv  INVERSE-FLOAT-TEST.csv  LLT-DOUBLE-RESULT.csv  LU-DOUBLE-RESULT.csv  LU-DOUBLE-TEST.csv  LU-FLOAT-TEST.csv  MATMUL-DOUBLE-TEST.csv  QR-DOUBLE-TEST.csv  QR-FLOAT-RESULT.csv  QR-FLOAT-TEST.csv  RANK-DOUBLE-RESULT.csv  RANK-FLOAT-RESULT.csv  RANK-FLOAT-TEST.csv  READ-FLASH-DOUBLE-RESULT.csv  READ-FLASH-DOUBLE-TEST.csv  READ-FLASH-FLOAT-RESULT.csv  READ-FLASH-FLOAT-TEST.csv  STACK-ALLOC-DOUBLE-RESULT.csv
pico/alloc-heap/include/: debug.h  run.h
pico/alloc-stack/: CMakeLists.txt
pico/alloc-stack/include/: debug.h  run.h
pico/det/include/: debug.h  run.h
pico/eigen-values/include/: debug.h  run.h
pico/include/: benchmarks.h  const_rand.h  print.h
pico/inverse/include/: debug.h  run.h
pico/llt/: CMakeLists.txt
pico/llt/include/: debug.h  run.h
pico/lu/: CMakeLists.txt  main.cpp
pico/lu/include/: debug.h  run.h
pico/matmul/: CMakeLists.txt
pico/matmul/include/: debug.h  run.h
pico/qr/: main.cpp
pico/qr/include/: debug.h  run.h
pico/rank/: CMakeLists.txt
pico/rank/include/: debug.h  run.h
pico/read-flash/include/: debug.h  run.h
pico/results/: qr.csv
pico2-results/: COPY-DOUBLE-RESULT.csv  COPY-FLOAT-RESULT.csv  DET-DOUBLE-RESULT.csv  DET-DOUBLE-TEST.csv  DET-FLOAT-RESULT.csv  EIGEN-VALUES-DOUBLE-TEST.csv  EIGEN-VALUES-FLOAT-RESULT.csv  EIGEN-VALUES-FLOAT-TEST.csv  HEAP-ALLOC-DOUBLE-RESULT.csv  INVERSE-DOUBLE-TEST.csv  INVERSE-FLOAT-RESULT.csv  INVERSE-FLOAT-TEST.csv  LLT-DOUBLE-TEST.csv  LLT-FLOAT-RESULT.csv  LU-FLOAT-RESULT.csv  MATMUL-FLOAT-RESULT.csv  MATMUL-FLOAT-TEST.csv  QR-DOUBLE-RESULT.csv  QR-DOUBLE-TEST.csv  QR-FLOAT-TEST.csv  RANK-DOUBLE-RESULT.csv  RANK-FLOAT-RESULT.csv  RANK-FLOAT-TEST.csv  READ-FLASH-DOUBLE-RESULT.csv  READ-FLASH-DOUBLE-TEST.csv  READ-FLASH-FLOAT-RESULT.csv  READ-FLASH-FLOAT-TEST.csv
projects/add/: CMakeLists.txt  compile_commands.json  main.cpp
projects/eigen/: CMakeLists.txt  eigen.c
projects/eigen_test/: CMakeLists.txt  compile_commands.json  main.c  main.cpp
projects/hello_world/: CMakeLists.txt  compile_commands.json  main.c
projects/mul/: CMakeLists.txt  compile_commands.json  main.cpp
results/: DETERMINANT-DOUBLE-RESULT.csv  DETERMINANT-DOUBLE-TEST.csv  DETERMINANT-FLOAT-RESULT.csv  DETERMINANT-FLOAT-TEST.csv  INVERSE-DOUBLE-RESULT.csv  INVERSE-DOUBLE-TEST.csv  INVERSE-FLOAT-RESULT.csv  INVERSE-FLOAT-TEST.csv  LU-DOUBLE-RESULT.csv  LU-DOUBLE-TEST.csv  LU-FLOAT-RESULT.csv  LU-FLOAT-TEST.csv  QR-DOUBLE-RESULT.csv  QR-DOUBLE-TEST.csv  QR-FLOAT-RESULT.csv  QR-FLOAT-TEST.csv  copy-double-test-algorihtm.csv  copy-double.csv  copy-float-test-algorihtm.csv  copy-float.csv  determinant-double-test-algorihtm.csv  determinant-double.bak.csv  determinant-double.csv  determinant-float-test-algorihtm.csv  determinant-float.csv  heap-alloc-double-test-algorihtm.csv  heap-alloc-double.csv  heap-alloc-float-test-algorihtm.csv  heap-alloc-float.csv  heap-frag-double-test-algorihtm.csv  heap-frag-double.csv  heap-frag-float-test-algorihtm.csv  heap-frag-float.csv  inverse-double-test-algorihtm.csv  inverse-double.csv  inverse-float-test-algorihtm.csv  inverse-float.csv  lu-double-test-algorihtm.csv  lu-double.csv  lu-float-test-algorihtm.csv  (+13 more)
shared/psram/: CMakeLists.txt  psram.c  psram.h
src/: console.py  main.cpp
(+192 files in other folders)
